--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@material-ui/pickers": "^3.3.10",
     "@mui/material": "^5.11.8",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+    "@syncfusion/ej2-react-grids": "^20.4.53",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "classnames": "^2.3.1",
